samples/_failures_safe/1761410164_c287f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3b9fecbd.c: In function ‘main’:
./samples/SAFE/__tmp_3b9fecbd.c:171:9: error: expected declaration or statement at end of input
  171 |         }
      |         ^
./samples/SAFE/__tmp_3b9fecbd.c:171:9: error: expected declaration or statement at end of input
